--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Canvas Hub</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="bg-canvas-slate-800"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
