Fix scroll issue with scan results

--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Canvas Hub</title>
   </head>
-  <body>
-    <div id="app" class="bg-canvas-slate-800"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+  <div id="app" class="bg-canvas-slate-800 flex flex-col" style="height: 100vh"></div>
+  <script type="module" src="/src/main.js"></script>
 </html>
